--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@
   
   .economique
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #b8b7b7;
     background: #ffff; 
@@ -142,7 +142,7 @@
   
   .economique:hover
   {
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #DEEBFF;
     background: #DEEBFF; 
@@ -167,7 +167,7 @@
   
   .familiale
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #b8b7b7;
     background: #ffff; 
@@ -178,7 +178,7 @@
   
   .familiale:hover
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #DEEBFF;
     background: #DEEBFF; 
@@ -204,7 +204,7 @@
   
   .romantique
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #b8b7b7;
     background: #ffff; 
@@ -215,7 +215,7 @@
   
   .romantique:hover
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #DEEBFF;
     background: #DEEBFF; 
@@ -241,7 +241,7 @@
   
   .animaux
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #b8b7b7;
     background: #ffff; 
@@ -252,7 +252,7 @@
   
   .animaux:hover 
   { 
-    padding: 9.5px 20px; 
+    padding: 11.5px 20px; 
     border-radius: 30px; 
     border: 1.5px solid #DEEBFF;
     background: #DEEBFF; 
@@ -363,6 +363,7 @@
 .auberge_bloc_text_and_stars p strong
   {
    font-size: 12px;
+   line-height: -5;
   }
 
 .auberge_bloc_text_and_stars p
@@ -2108,7 +2109,7 @@ body
    filter: drop-shadow(1px 1px 10px #4444442e);
    width: 94.5%;
    margin: auto;
-   margin-top: 0px;
+   margin-top: 5px;
    padding-bottom: 5px;
   }
 
@@ -2148,6 +2149,7 @@ body
    width: 94.5%;
    margin: auto;
    margin-bottom: 0px;
+   margin-top: 5px;
   }
   
   .amina_pic
@@ -2597,9 +2599,7 @@ body
   .filter_list
   {
     display: flex;
-    flex-direction: row;
-    /* justify-content: center; */
-    /* align-items: center; */
+    align-content: center;
     margin-top: 10px;
   }
   
@@ -2648,63 +2648,63 @@ body
    .fa-child     /*icon class pour Familiale*/
   {
     bottom: -21.5px;
-    left: 19%;
+    left: 22%;
   } 
   
   .familiale
-  { 
-    width: 80px; 
+  {
+    width: 70px;
     bottom: -22px;
-    left: 20%;  
+    left: 23%;
   }
   
   .familiale:hover
   { 
-    width: 80px; 
+    width: 70px; 
     bottom: -22px;
-    left: 20%;
+    left: 23%;
   }
   
   /*///////////////////////////////////////////////////////////*/
    .fa-heart     /*icon class pour Romantique*/
   {
     bottom: -21.5px;
-    left: 35%;  
+    left: 39.5%;  
   } 
   
   .romantique
-  { 
-    width: 110px; 
+  {
+    width: 100px;
     bottom: -22px;
-    left: 36%;  
+    left: 40.5%;
   }
   
   .romantique:hover
   { 
-    width: 110px; 
+    width: 100px; 
     bottom: -22px;
-    left: 36%; 
+    left: 40.5%; 
   }
   
   /*///////////////////////////////////////////////////////////*/
    .fa-dog     /*icon class pour Animaux authorisés*/
   {
     bottom: -21.5px;
-    left: 54.6%;
+    left: 60.6%;
   } 
   
   .animaux
-  { 
-    width: 180px; 
+  {
+    width: 150px;
     bottom: -22px;
-    left: 55.5%; 
+    left: 61.5%;
   }
   
   .animaux:hover 
   {
-    width: 180px; 
+    width: 150px; 
     bottom: -22px;
-    left: 55.5%;  
+    left: 61.5%;  
   }
   /* Info block ///////////////////////////////////////////*/
      
@@ -2719,9 +2719,10 @@ body
   {
     display: flex;
     justify-content: center;
+    align-content: baseline;
     flex-direction: row;
     column-gap: 20px;
-    align-items: flex-start;
+    /* align-items: baseline; */
   }
   
   
@@ -2729,28 +2730,30 @@ body
   .block_lodging
   {
     width: 100%;
-    min-height: 451px;
+    /* height: 445px; */
     background: #F2F2F2;
     border-radius: 15px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 13px;
+    padding-right: 31px;
     padding-bottom: 20px;
     margin-top: 20px;
-    margin-bottom: 25px;
+    margin-bottom: 11px;
     margin-left: 50px;
+    padding-top: 11px;
+    box-sizing: content-box;
   }
 
  .block_lodging_photos
   {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: -4px;
   }
  
    
   #lodging_title
   {
   font-size: 16px;
-  margin-top: 30px;
+  margin-top: 25px;
   }
 
 
@@ -2764,24 +2767,24 @@ body
   column-gap: 4%;
   /* margin-left: 0%; */
   margin-top: 0px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
  }
  
  .auberge_la_cannebiere
   {
-   width: 183px;
+   width: 100%;
    height: 143px;
   }
 
  .hotel_du_port
  {
-   width: 183px;
+   width: 100%;
    height: 143px;
  }
 
  .hotel_les_mouettes
  {
-   width: 183px;
+   width: 100%;
    height: 143px;
    margin: 0px;
  }
@@ -2797,24 +2800,24 @@ body
   column-gap: 4%;
   margin-left: 0%;
   margin-right: 0%;
-  margin-bottom: 30px;
+  margin-bottom: 31px;
 }
 
 .hotel_mere
 {
-   width: 183px;
+   width: 100%;
    height: 143px;
 }
 
 .hotel_le_panier
 {
-   width: 183px;
+   width: 100%;
    height: 143px;
 }
 
 .hotel_chez_amina
 {
-   width: 183px;
+   width: 100%;
    height: 143px;
  }
 
@@ -2826,12 +2829,14 @@ body
   .auberge_pic
   {
     width: 95.5%;
+    height: 75px;
   }
 
  .auberge_bloc_text_and_stars 
  {
-   width: 99.5%;
+   width: 100%;
    box-sizing: border-box;
+   line-height: 1.4;
  }
   
       
@@ -2841,6 +2846,7 @@ body
   .port_pic
   {
     width: 95.5%;
+    height: 75px;
   }
 
   .port_bloc_text_and_stars
@@ -2856,6 +2862,7 @@ body
   .les_mouettes_pic
   {
     width: 95.5%;
+    height: 75px;
     object-position: 48% 55%;
   }
 
@@ -2873,6 +2880,7 @@ body
   .mere_pic
   {
     width: 95.5%;
+    height: 75px;
     object-position: 48% 55%;
   }
 
@@ -2889,6 +2897,7 @@ body
   .panier_pic
   {
     width: 95.5%;
+    height: 75px;
     object-position: 48% 55%;
   }
 
@@ -2906,6 +2915,7 @@ body
   .amina_pic
   {
     width: 95.5%;
+    height: 75px;
     object-position: 48% 55%;
   }
  
@@ -2932,19 +2942,26 @@ body
 /*///// Plus populaire photo block /////    //////    //////   //////    //////*/
 /*///// Plus populaire photo block /////    //////    //////   //////    //////*/
   
+
+  .title_and_graph
+  {
+margin-top: -0px;
+    padding-top: 0px;
+  }
+
   .block_populaire
   {
     display: flex;
     flex-direction: column;
-    width: 40%;
-    min-height: 445px;
+    width: 60%;
+    height: px;
     background: #F2F2F2;
     border-radius: 15px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-bottom: 0px;
-    padding-top: 15px;
-    margin-top: px;
+    padding-top: 22px;
+    box-sizing: border-box;
   }
 
 
@@ -2954,6 +2971,8 @@ body
   .hotel_soleil_du_matin
   {
    width: 100%;
+   margin-bottom: -10px;
+   margin-top: 0px;
   }
 
   .soleil_bloc_text_and_stars 
@@ -2968,7 +2987,7 @@ body
   .coeur_eau
    {
    width: 100%;
-
+   margin-bottom: -10px;
    }
 
   .coeur_eau_bloc_text_and_stars 
@@ -2982,7 +3001,7 @@ body
   .bleu_blanc
   {
    width: 100%;
-
+   margin-bottom: -2px;
    }
 
 
@@ -2991,7 +3010,7 @@ body
   .afficher_plus      /*Read more link*/
   {
     margin-left: 10px;
-    /* margin-bottom: 10px; */
+    padding-bottom: 10px;
   }
 
 
@@ -3051,8 +3070,8 @@ body
     background-color: #F2F2F2;
     width: 100%;
     margin-top: 0px;
+    padding-left: 5px;
     padding-bottom: 0px;
-
   }
   
   footer li
@@ -3073,4 +3092,13 @@ body
    line-height: 25px;
   }     
   
+  .about
+  {
+  margin-left: -95px;
+    
+  }
+
+
+
+
 }
