--- a/style.css
+++ b/style.css
@@ -1261,49 +1261,100 @@ body{margin: 0px;}
   /*////////////////////////////////////////////////////////////////*/  
  
 
- @media only screen and (max-width: 576px)  {
-
-.filter_menu {
-  flex-wrap: wrap;}
-
-
-
-
-
-
- }
-
-
-
-
-
-
-
-
- @media only screen and (max-width: 992px)  {
+ @media only screen and (max-width: 992px) {
 
 .hebergement_and_activities_results 
 {
   flex-direction:column-reverse;
-  align-items:center;
+}
+
+.block_lodging
+{
+ width: auto;
+
 }
 
 .block_populaire
 {
-  flex-direction:row;
-  justify-content:center;
+  flex-direction:column;
+
   width: 100%;
+
 }
 
 .title_and_graph
 {
-  align-self:baseline;
-  
+  justify-content: space-between;
+
 }
 
+
+
+
+ }
+
+
+
+@media only screen and (max-width: 576px)  {
+
+.filter_menu 
+{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.block_lodging
+{
+ background: #ffffff;
+}
+
+
+.auberge_la_cannebiere, .hotel_du_port, 
+.hotel_les_mouettes, .hotel_mere, .hotel_le_panier, .hotel_chez_amina
+{
+ width: 100%; 
+ margin-bottom: 20px;
+
+}
+
+.bloc_cannebiere_port_Mouettes
+{
+ flex-direction:column;
+ align-content:space-around;
+}
+
+
+.bloc_mere_panier_amina
+{
+ flex-direction:column;
+ align-items:center;
+}
+
+
+
+.block_populaire
+{
+ flex-direction:column;
+ border-radius: 0px;
+ width: 100%;
+ margin-bottom: 0px;
+}
+
+.title_and_graph
+{
+ justify-content: space-betwee;
+
+}
 
 
 
 
 
  }
+
+
+
+
+
+
